syntax = "proto3";
package pb;
/*
pay_consume rpc 协议
*/

//到期时刻的时间戳
//是否使用
//是否解锁
//系列的icon展示
//系列的星级
//是否升星 (如果当前在使用的下一个等级是否解锁)
//续费价格显示当前正在使用的星级价格
//加一个预览mp4字段


option go_package = "../app/pb";

message MgetPretendsReq{
	repeated uint32 pretend_ids = 1;
}

message MgetPretendsResp{
	map<uint32,PretendInfo> data = 1 ;
}

message Mp4Source {
	string url=1;//mp4的播放url
	uint32 vap_size=2;//资源大小
}

message PretendInfo {
	uint32 id = 2;
	string name = 3;
	uint32 sex = 4;
	uint32 star_num = 5;
	string url_source = 6;
	string preview_source = 7;//预览资源
	string desc = 8;
	uint32 vap_size = 10;
	bool is_lock= 11;//是否锁定：true：锁，false：已解锁
	uint32 ext_id= 12;//gift_id
	string font_color=13;//入场横幅专用的字体颜色
	uint32 cate_id=14;
	uint32 group_id=15;
	Mp4Source mp4_source=16;
	uint32 second_cate_id = 17;
}
